# cpp_result

./: README.md  conanfile.py  meson.build
cpp_result/: all.hpp  error.hpp  optional.hpp  result.hpp
examples/: error.cpp  optional.cpp  result.cpp  version.cpp
include/: error.hpp  optional.hpp  result.hpp  version.hpp.in
test_package/: conanfile.py  meson.build
test_package/src/: main.cpp
tests/: error.test.cpp  optional.test.cpp  result.test.cpp  version.test.cpp
